vendor/linux/x64/ftd2xx.h


/** @name FT_HANDLE 
 * An opaque value used as a handle to an opened FT device.
 */
typedef PVOID	FT_HANDLE;


/** @{
 * @name FT_STATUS 
 * @details Return status values for API calls. 
 */
typedef ULONG	FT_STATUS;


enum {
	FT_OK,
	FT_INVALID_HANDLE,
	FT_DEVICE_NOT_FOUND,
	FT_DEVICE_NOT_OPENED,
	FT_IO_ERROR,
	FT_INSUFFICIENT_RESOURCES,
	FT_INVALID_PARAMETER,
	FT_INVALID_BAUD_RATE,

	FT_DEVICE_NOT_OPENED_FOR_ERASE,
	FT_DEVICE_NOT_OPENED_FOR_WRITE,
	FT_FAILED_TO_WRITE_DEVICE,
	FT_EEPROM_READ_FAILED,
	FT_EEPROM_WRITE_FAILED,
	FT_EEPROM_ERASE_FAILED,
	FT_EEPROM_NOT_PRESENT,
	FT_EEPROM_NOT_PROGRAMMED,
	FT_INVALID_ARGS,
	FT_NOT_SUPPORTED,
	FT_OTHER_ERROR,
	FT_DEVICE_LIST_NOT_READY,
};

/** @{
 * @name FT_OpenEx Flags
 * @see FT_OpenEx
 */
#define FT_OPEN_BY_SERIAL_NUMBER	1
#define FT_OPEN_BY_DESCRIPTION		2
#define FT_OPEN_BY_LOCATION			4
/** @} */

/** @{
 * @name FT_ListDevices Flags
 * @remarks Used in conjunction with FT_OpenEx Flags
 * @see FT_ListDevices
 * @see FT_OpenEx
 */
#define FT_LIST_NUMBER_ONLY			0x80000000
#define FT_LIST_BY_INDEX			0x40000000
#define FT_LIST_ALL					0x20000000

	/** @noop FT_CreateDeviceInfoList
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later) 
	 * @par Summary
	 * This function builds a device information list and returns the number of D2XX devices connected to the
	 * system. The list contains information about both unopen and open devices.
	 * @param lpdwNumDevs Pointer to unsigned long to store the number of devices connected.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * An application can use this function to get the number of devices attached to the system. It can then
	 * allocate space for the device information list and retrieve the list using FT_GetDeviceInfoList or
	 * FT_GetDeviceInfoDetail.
	 * @n If the devices connected to the system change, the device info list will not be updated until
	 * FT_CreateDeviceInfoList is called again. 
	 * @see FT_GetDeviceInfoList
	 * @see FT_GetDeviceInfoDetail
	 */
	FTD2XX_API FT_STATUS WINAPI FT_CreateDeviceInfoList(
		LPDWORD lpdwNumDevs
		);


	/**  @noop FT_DEVICE_LIST_INFO_NODE
	 * @par Summary
	 * This structure is used for passing information about a device back from the FT_GetDeviceInfoList function.
	 * @see FT_GetDeviceInfoList
	 */
	typedef struct _ft_device_list_info_node {
		ULONG Flags;
		ULONG Type;
		ULONG ID;
		DWORD LocId;
		char SerialNumber[16];
		char Description[64];
		FT_HANDLE ftHandle;
	} FT_DEVICE_LIST_INFO_NODE;


	/** @noop FT_GetDeviceInfoList
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later) 
	 * @par Summary
	 * This function returns a device information list and the number of D2XX devices in the list.
	 * @param *pDest Pointer to an array of FT_DEVICE_LIST_INFO_NODE structures.
	 * @param lpdwNumDevs Pointer to the number of elements in the array.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function should only be called after calling FT_CreateDeviceInfoList. If the devices connected to the
	 * system change, the device info list will not be updated until FT_CreateDeviceInfoList is called again.
	 * Location ID information is not returned for devices that are open when FT_CreateDeviceInfoList is called.
	 * Information is not available for devices which are open in other processes. In this case, the Flags
	 * parameter of the FT_DEVICE_LIST_INFO_NODE will indicate that the device is open, but other fields will
	 * be unpopulated.
	 * @n The flag value is a 4-byte bit map containing miscellaneous data as defined Appendix A - Type
	 * Definitions. Bit 0 (least significant bit) of this number indicates if the port is open (1) or closed (0). Bit 1
	 * indicates if the device is enumerated as a high-speed USB device (2) or a full-speed USB device (0). The
	 * remaining bits (2 - 31) are reserved.
	 * @n The array of FT_DEVICE_LIST_INFO_NODES contains all available data on each device. The structure of
	 * FT_DEVICE_LIST_INFO_NODES is given in the Appendix. The storage for the list must be allocated by
	 * the application. The number of devices returned by FT_CreateDeviceInfoList can be used to do this.
	 * When programming in Visual Basic, LabVIEW or similar languages, FT_GetDeviceInfoDetail may be
	 * required instead of this function.
	 * @note Please note that Windows CE does not support location IDs. As such, the Location ID parameter in the 
	 * structure will be empty.
	 * @see FT_CreateDeviceInfoList
	 */
	FTD2XX_API FT_STATUS WINAPI FT_GetDeviceInfoList(
		FT_DEVICE_LIST_INFO_NODE *pDest,
		LPDWORD lpdwNumDevs
		);


	/** @noop FT_GetDeviceInfoDetail
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later) 
	 * @par Summary
	 * This function returns an entry from the device information list.
	 * @param dwIndex Index of the entry in the device info list.
	 * @param lpdwFlags Pointer to unsigned long to store the flag value.
	 * @param lpdwType Pointer to unsigned long to store device type.
	 * @param lpdwID Pointer to unsigned long to store device ID.
	 * @param lpdwLocId Pointer to unsigned long to store the device location ID.
	 * @param lpSerialNumber Pointer to buffer to store device serial number as a nullterminated string.
	 * @param lpDescription Pointer to buffer to store device description as a null-terminated string.
	 * @param *pftHandle Pointer to a variable of type FT_HANDLE where the handle will be stored.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function should only be called after calling FT_CreateDeviceInfoList. If the devices connected to the
	 * system change, the device info list will not be updated until FT_CreateDeviceInfoList is called again.
	 * @n The index value is zero-based.
	 * @n The flag value is a 4-byte bit map containing miscellaneous data as defined Appendix A - Type
	 * Definitions. Bit 0 (least significant bit) of this number indicates if the port is open (1) or closed (0). Bit 1
	 * indicates if the device is enumerated as a high-speed USB device (2) or a full-speed USB device (0). The
	 * remaining bits (2 - 31) are reserved.
	 * @n Location ID information is not returned for devices that are open when FT_CreateDeviceInfoList is called.
	 * Information is not available for devices which are open in other processes. In this case, the lpdwFlags
	 * parameter will indicate that the device is open, but other fields will be unpopulated.
	 * To return the whole device info list as an array of FT_DEVICE_LIST_INFO_NODE structures, use
	 * FT_CreateDeviceInfoList.
	 * @note Please note that Windows CE does not support location IDs. As such, the Location ID parameter in the 
	 * structure will be empty.
	 * @see FT_CreateDeviceInfoList
	 */
	FTD2XX_API FT_STATUS WINAPI FT_GetDeviceInfoDetail(
		DWORD dwIndex,
		LPDWORD lpdwFlags,
		LPDWORD lpdwType,
		LPDWORD lpdwID,
		LPDWORD lpdwLocId,
		LPVOID lpSerialNumber,
		LPVOID lpDescription,
		FT_HANDLE *pftHandle
		);


	/** @noop FT_ListDevices
	 * @par Summary
	 * Gets information concerning the devices currently connected. This function can return information such
	 * as the number of devices connected, the device serial number and device description strings, and the
	 * location IDs of connected devices.
	 * @param pvArg1 Meaning depends on dwFlags.
	 * @param pvArg2 Meaning depends on dwFlags.
	 * @param dwFlags Determines format of returned information.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function can be used in a number of ways to return different types of information. A more powerful
	 * way to get device information is to use the FT_CreateDeviceInfoList, FT_GetDeviceInfoList and
	 * FT_GetDeviceInfoDetail functions as they return all the available information on devices.
	 * In its simplest form, it can be used to return the number of devices currently connected. If
	 * FT_LIST_NUMBER_ONLY bit is set in dwFlags, the parameter pvArg1 is interpreted as a pointer to a
	 * DWORD location to store the number of devices currently connected.
	 * @n It can be used to return device information: if FT_OPEN_BY_SERIAL_NUMBER bit is set in dwFlags, the
	 * serial number string will be returned; if FT_OPEN_BY_DESCRIPTION bit is set in dwFlags, the product 
	 * description string will be returned; if FT_OPEN_BY_LOCATION bit is set in dwFlags, the Location ID will 
	 * be returned; if none of these bits is set, the serial number string will be returned by default.
	 * @n It can be used to return device string information for a single device. If FT_LIST_BY_INDEX and
	 * FT_OPEN_BY_SERIAL_NUMBER or FT_OPEN_BY_DESCRIPTION bits are set in dwFlags, the parameter
	 * pvArg1 is interpreted as the index of the device, and the parameter pvArg2 is interpreted as a pointer to
	 * a buffer to contain the appropriate string. Indexes are zero-based, and the error code
	 * FT_DEVICE_NOT_FOUND is returned for an invalid index.
	 * @n It can be used to return device string information for all connected devices. If FT_LIST_ALL and
	 * FT_OPEN_BY_SERIAL_NUMBER or FT_OPEN_BY_DESCRIPTION bits are set in dwFlags, the parameter
	 * pvArg1 is interpreted as a pointer to an array of pointers to buffers to contain the appropriate strings and
	 * the parameter pvArg2 is interpreted as a pointer to a DWORD location to store the number of devices
	 * currently connected. Note that, for pvArg1, the last entry in the array of pointers to buffers should be a
	 * NULL pointer so the array will contain one more location than the number of devices connected.
	 * @n The location ID of a device is returned if FT_LIST_BY_INDEX and FT_OPEN_BY_LOCATION bits are set in
	 * dwFlags. In this case the parameter pvArg1 is interpreted as the index of the device, and the parameter
	 * pvArg2 is interpreted as a pointer to a variable of type long to contain the location ID. Indexes are 
	 * zerobased, and the error code FT_DEVICE_NOT_FOUND is returned for an invalid index. Please note that
	 * Windows CE and Linux do not support location IDs.
	 * @n The location IDs of all connected devices are returned if FT_LIST_ALL and FT_OPEN_BY_LOCATION bits
	 * are set in dwFlags. In this case, the parameter pvArg1 is interpreted as a pointer to an array of variables
	 * of type long to contain the location IDs, and the parameter pvArg2 is interpreted as a pointer to a
	 * DWORD location to store the number of devices currently connected.
	 * @see FT_CreateDeviceInfoList
	 * @see FT_GetDeviceInfoList
	 * @see FT_GetDeviceInfoDetail
	 */
	FTD2XX_API FT_STATUS WINAPI FT_ListDevices(
		PVOID pvArg1,
		PVOID pvArg2,
		DWORD dwFlags
		);


	/** @noop FT_Open
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Open the device and return a handle which will be used for subsequent accesses.
	 * @param deviceNumber Index of the device to open. Indices are 0 based.
	 * @param pHandle Pointer to a variable of type FT_HANDLE where the handle will be stored. This handle must 
	 * be used to access the device.
	 * @return
	 * FT_OK if successful, otherwise the return value is an FT error code. 
	 * @remarks
	 * Although this function can be used to open multiple devices by setting iDevice to 0, 1, 2 etc. there is no
	 * ability to open a specific device. To open named devices, use the function FT_OpenEx.
	 * @see FT_OpenEx.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_Open(
		int deviceNumber,
		FT_HANDLE *pHandle
		);


	/** @noop FT_OpenEx
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Open the specified device and return a handle that will be used for subsequent accesses. The device can
	 * be specified by its serial number, device description or location.
	 * @n This function can also be used to open multiple devices simultaneously. Multiple devices can be specified
	 * by serial number, device description or location ID (location information derived from the physical
	 * location of a device on USB). Location IDs for specific USB ports can be obtained using the utility
	 * USBView and are given in hexadecimal format. Location IDs for devices connected to a system can be
	 * obtained by calling FT_GetDeviceInfoList or FT_ListDevices with the appropriate flags.
	 * @param pvArg1 Pointer to an argument whose type depends on the value of dwFlags. 
	 * It is normally be interpreted as a pointer to a null terminated string.
	 * @param dwFlags FT_OPEN_BY_SERIAL_NUMBER, FT_OPEN_BY_DESCRIPTION or FT_OPEN_BY_LOCATION.
	 * @param pHandle Pointer to a variable of type FT_HANDLE where the handle will be
	 * stored. This handle must be used to access the device.
	 * @returns 
	 * FT_OK if successful, otherwise the return value is an FT error code. 
	 * @remarks 
	 * The parameter specified in pvArg1 depends on dwFlags: if dwFlags is FT_OPEN_BY_SERIAL_NUMBER,
	 * pvArg1 is interpreted as a pointer to a null-terminated string that represents the serial number of the
	 * device; if dwFlags is FT_OPEN_BY_DESCRIPTION, pvArg1 is interpreted as a pointer to a nullterminated 
	 * string that represents the device description; if dwFlags is FT_OPEN_BY_LOCATION, pvArg1
	 * is interpreted as a long value that contains the location ID of the device. Please note that Windows CE
	 * and Linux do not support location IDs.
	 * @n ftHandle is a pointer to a variable of type FT_HANDLE where the handle is to be stored. This handle must
	 * be used to access the device.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_OpenEx(
		PVOID pvArg1,
		DWORD dwFlags,
		FT_HANDLE *pHandle
		);