src/bindings_macos_aarch64.rs

#[doc = "  @noop FT_DEVICE_LIST_INFO_NODE"]
#[doc = " @par Summary"]
#[doc = " This structure is used for passing information about a device back from the FT_GetDeviceInfoList function."]
#[doc = " @see FT_GetDeviceInfoList"]
pub type FT_DEVICE_LIST_INFO_NODE = _ft_device_list_info_node;
extern "C" {
    #[doc = " @noop FT_GetDeviceInfoList"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function returns a device information list and the number of D2XX devices in the list."]
    #[doc = " @param *pDest Pointer to an array of FT_DEVICE_LIST_INFO_NODE structures."]
    #[doc = " @param lpdwNumDevs Pointer to the number of elements in the array."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function should only be called after calling FT_CreateDeviceInfoList. If the devices connected to the"]
    #[doc = " system change, the device info list will not be updated until FT_CreateDeviceInfoList is called again."]
    #[doc = " Location ID information is not returned for devices that are open when FT_CreateDeviceInfoList is called."]
    #[doc = " Information is not available for devices which are open in other processes. In this case, the Flags"]
    #[doc = " parameter of the FT_DEVICE_LIST_INFO_NODE will indicate that the device is open, but other fields will"]
    #[doc = " be unpopulated."]
    #[doc = " @n The flag value is a 4-byte bit map containing miscellaneous data as defined Appendix A - Type"]
    #[doc = " Definitions. Bit 0 (least significant bit) of this number indicates if the port is open (1) or closed (0). Bit 1"]
    #[doc = " indicates if the device is enumerated as a high-speed USB device (2) or a full-speed USB device (0). The"]
    #[doc = " remaining bits (2 - 31) are reserved."]
    #[doc = " @n The array of FT_DEVICE_LIST_INFO_NODES contains all available data on each device. The structure of"]
    #[doc = " FT_DEVICE_LIST_INFO_NODES is given in the Appendix. The storage for the list must be allocated by"]
    #[doc = " the application. The number of devices returned by FT_CreateDeviceInfoList can be used to do this."]
    #[doc = " When programming in Visual Basic, LabVIEW or similar languages, FT_GetDeviceInfoDetail may be"]
    #[doc = " required instead of this function."]
    #[doc = " @note Please note that Windows CE does not support location IDs. As such, the Location ID parameter in the"]
    #[doc = " structure will be empty."]
    #[doc = " @see FT_CreateDeviceInfoList"]
    pub fn FT_GetDeviceInfoList(
        pDest: *mut FT_DEVICE_LIST_INFO_NODE,
        lpdwNumDevs: LPDWORD,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_GetDeviceInfoDetail"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function returns an entry from the device information list."]
    #[doc = " @param dwIndex Index of the entry in the device info list."]
    #[doc = " @param lpdwFlags Pointer to unsigned long to store the flag value."]
    #[doc = " @param lpdwType Pointer to unsigned long to store device type."]
    #[doc = " @param lpdwID Pointer to unsigned long to store device ID."]
    #[doc = " @param lpdwLocId Pointer to unsigned long to store the device location ID."]
    #[doc = " @param lpSerialNumber Pointer to buffer to store device serial number as a nullterminated string."]
    #[doc = " @param lpDescription Pointer to buffer to store device description as a null-terminated string."]
    #[doc = " @param *pftHandle Pointer to a variable of type FT_HANDLE where the handle will be stored."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function should only be called after calling FT_CreateDeviceInfoList. If the devices connected to the"]
    #[doc = " system change, the device info list will not be updated until FT_CreateDeviceInfoList is called again."]
    #[doc = " @n The index value is zero-based."]
    #[doc = " @n The flag value is a 4-byte bit map containing miscellaneous data as defined Appendix A - Type"]
    #[doc = " Definitions. Bit 0 (least significant bit) of this number indicates if the port is open (1) or closed (0). Bit 1"]
    #[doc = " indicates if the device is enumerated as a high-speed USB device (2) or a full-speed USB device (0). The"]
    #[doc = " remaining bits (2 - 31) are reserved."]
    #[doc = " @n Location ID information is not returned for devices that are open when FT_CreateDeviceInfoList is called."]
    #[doc = " Information is not available for devices which are open in other processes. In this case, the lpdwFlags"]
    #[doc = " parameter will indicate that the device is open, but other fields will be unpopulated."]
    #[doc = " To return the whole device info list as an array of FT_DEVICE_LIST_INFO_NODE structures, use"]
    #[doc = " FT_CreateDeviceInfoList."]
    #[doc = " @note Please note that Windows CE does not support location IDs. As such, the Location ID parameter in the"]
    #[doc = " structure will be empty."]
    #[doc = " @see FT_CreateDeviceInfoList"]
    pub fn FT_GetDeviceInfoDetail(
        dwIndex: DWORD,
        lpdwFlags: LPDWORD,
        lpdwType: LPDWORD,
        lpdwID: LPDWORD,
        lpdwLocId: LPDWORD,
        lpSerialNumber: LPVOID,
        lpDescription: LPVOID,
        pftHandle: *mut FT_HANDLE,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_ListDevices"]
    #[doc = " @par Summary"]
    #[doc = " Gets information concerning the devices currently connected. This function can return information such"]
    #[doc = " as the number of devices connected, the device serial number and device description strings, and the"]
    #[doc = " location IDs of connected devices."]
    #[doc = " @param pvArg1 Meaning depends on dwFlags."]
    #[doc = " @param pvArg2 Meaning depends on dwFlags."]
    #[doc = " @param dwFlags Determines format of returned information."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function can be used in a number of ways to return different types of information. A more powerful"]
    #[doc = " way to get device information is to use the FT_CreateDeviceInfoList, FT_GetDeviceInfoList and"]
    #[doc = " FT_GetDeviceInfoDetail functions as they return all the available information on devices."]
    #[doc = " In its simplest form, it can be used to return the number of devices currently connected. If"]
    #[doc = " FT_LIST_NUMBER_ONLY bit is set in dwFlags, the parameter pvArg1 is interpreted as a pointer to a"]
    #[doc = " DWORD location to store the number of devices currently connected."]
    #[doc = " @n It can be used to return device information: if FT_OPEN_BY_SERIAL_NUMBER bit is set in dwFlags, the"]
    #[doc = " serial number string will be returned; if FT_OPEN_BY_DESCRIPTION bit is set in dwFlags, the product"]
    #[doc = " description string will be returned; if FT_OPEN_BY_LOCATION bit is set in dwFlags, the Location ID will"]
    #[doc = " be returned; if none of these bits is set, the serial number string will be returned by default."]
    #[doc = " @n It can be used to return device string information for a single device. If FT_LIST_BY_INDEX and"]
    #[doc = " FT_OPEN_BY_SERIAL_NUMBER or FT_OPEN_BY_DESCRIPTION bits are set in dwFlags, the parameter"]
    #[doc = " pvArg1 is interpreted as the index of the device, and the parameter pvArg2 is interpreted as a pointer to"]
    #[doc = " a buffer to contain the appropriate string. Indexes are zero-based, and the error code"]
    #[doc = " FT_DEVICE_NOT_FOUND is returned for an invalid index."]
    #[doc = " @n It can be used to return device string information for all connected devices. If FT_LIST_ALL and"]
    #[doc = " FT_OPEN_BY_SERIAL_NUMBER or FT_OPEN_BY_DESCRIPTION bits are set in dwFlags, the parameter"]
    #[doc = " pvArg1 is interpreted as a pointer to an array of pointers to buffers to contain the appropriate strings and"]
    #[doc = " the parameter pvArg2 is interpreted as a pointer to a DWORD location to store the number of devices"]
    #[doc = " currently connected. Note that, for pvArg1, the last entry in the array of pointers to buffers should be a"]
    #[doc = " NULL pointer so the array will contain one more location than the number of devices connected."]
    #[doc = " @n The location ID of a device is returned if FT_LIST_BY_INDEX and FT_OPEN_BY_LOCATION bits are set in"]
    #[doc = " dwFlags. In this case the parameter pvArg1 is interpreted as the index of the device, and the parameter"]
    #[doc = " pvArg2 is interpreted as a pointer to a variable of type long to contain the location ID. Indexes are"]
    #[doc = " zerobased, and the error code FT_DEVICE_NOT_FOUND is returned for an invalid index. Please note that"]
    #[doc = " Windows CE and Linux do not support location IDs."]
    #[doc = " @n The location IDs of all connected devices are returned if FT_LIST_ALL and FT_OPEN_BY_LOCATION bits"]
    #[doc = " are set in dwFlags. In this case, the parameter pvArg1 is interpreted as a pointer to an array of variables"]
    #[doc = " of type long to contain the location IDs, and the parameter pvArg2 is interpreted as a pointer to a"]
    #[doc = " DWORD location to store the number of devices currently connected."]
    #[doc = " @see FT_CreateDeviceInfoList"]
    #[doc = " @see FT_GetDeviceInfoList"]
    #[doc = " @see FT_GetDeviceInfoDetail"]
    pub fn FT_ListDevices(pvArg1: PVOID, pvArg2: PVOID, dwFlags: DWORD) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_Open"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Open the device and return a handle which will be used for subsequent accesses."]
    #[doc = " @param deviceNumber Index of the device to open. Indices are 0 based."]
    #[doc = " @param pHandle Pointer to a variable of type FT_HANDLE where the handle will be stored. This handle must"]
    #[doc = " be used to access the device."]
    #[doc = " @return"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " Although this function can be used to open multiple devices by setting iDevice to 0, 1, 2 etc. there is no"]
    #[doc = " ability to open a specific device. To open named devices, use the function FT_OpenEx."]
    #[doc = " @see FT_OpenEx."]
    pub fn FT_Open(deviceNumber: ::std::os::raw::c_int, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
